<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/prefs_name_hint"
        android:inputType="text"
        android:key="pm_ssid"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_mesh_ssid" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/prefs_pw_hint"
        android:inputType="text"
        android:key="pm_pw"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_mesh_password" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/prefs_port_hint"
        android:inputType="number"
        android:key="pm_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_mesh_port" />

</PreferenceScreen>
