<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:inputType="text"
        android:key="msg_1"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_mesh_msg1" />

    <EditTextPreference
        android:inputType="text"
        android:key="msg_2"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_mesh_msg2" />

    <EditTextPreference
        android:inputType="text"
        android:key="msg_3"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_mesh_msg3" />

    <EditTextPreference
        android:inputType="text"
        android:key="msg_4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_mesh_msg4" />

    <EditTextPreference
        android:inputType="text"
        android:key="msg_5"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_mesh_msg5" />

</PreferenceScreen>
