<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:ignore="Autofill,LabelFor">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/tv_ota_hdr"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ota_header"
			android:textAlignment="center"
			android:textColor="@android:color/black"
			android:textSize="30sp"
			android:textStyle="bold|italic" />

		<View
			android:id="@+id/separator"
			android:layout_width="match_parent"
			android:layout_height="10dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:background="@color/colorPrimary" />

		<TextView
			android:id="@+id/tv_ota_file_hdr"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ota_file"
			android:textAlignment="viewStart"
			android:textColor="@android:color/black"
			android:textSize="18sp"
			android:textStyle="bold|italic" />

		<TextView
			android:id="@+id/tv_ota_file"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ota_file"
			android:textAlignment="center"
			android:textColor="@android:color/black" />

		<Button
			android:id="@+id/bt_select_file"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:backgroundTint="@color/colorPrimary"
			android:text="@string/ota_sel_file" />

		<TextView
			android:id="@+id/tv_ota_md5_hdr"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ota_md5"
			android:textAlignment="viewStart"
			android:textColor="@android:color/black"
			android:textSize="18sp"
			android:textStyle="bold|italic" />

		<TextView
			android:id="@+id/tv_ota_md5"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ota_md5"
			android:textAlignment="center"
			android:textColor="@android:color/black" />

		<TextView
			android:id="@+id/tv_ota_node_hdr"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ota_node_type"
			android:textAlignment="viewStart"
			android:textColor="@android:color/black"
			android:textSize="18sp"
			android:textStyle="bold|italic" />

		<EditText
			android:id="@+id/et_node_type"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="textPersonName" />

		<View
			android:id="@+id/separator2"
			android:layout_width="match_parent"
			android:layout_height="10dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:background="@color/colorPrimary" />

		<TextView
			android:id="@+id/tv_ota_hw_hdr"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ota_hardware"
			android:textAlignment="viewStart"
			android:textColor="@android:color/black"
			android:textSize="18sp"
			android:textStyle="bold|italic" />

		<RadioGroup
			android:id="@+id/rg_hardware"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checkedButton="@id/rb_esp32">

			<RadioButton
				android:id="@+id/rb_esp32"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/ota_esp32" />

			<RadioButton
				android:id="@+id/rg_esp8266"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/ota_esp8266" />
		</RadioGroup>

		<View
			android:id="@+id/separator3"
			android:layout_width="match_parent"
			android:layout_height="10dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:background="@color/colorPrimary" />

		<RadioButton
			android:id="@+id/rb_force"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/ota_force_hdr" />

	</LinearLayout>

</ScrollView>